# Lab01_PART2_NUSP

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
data/gx/: great_expectations.yml
data/gx/expectations/: .ge_store_backend_id  bronze_suite.json
data/gx/validation_definitions/: bronze_validation.json
docs/images/: silver_report_exemplo.md
src/: bronze.py  bronze_validate.py  gold.py  silver.py
